fixed pico build on linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ if(MSVC)
   add_compile_options(/arch:AVX2 /Ox)
 else()
   #add_compile_options(-Wall -Wextra -Wpedantic -Werror)
-  if (UNIX)
+  if (UNIX AND NOT CMAKE_CROSSCOMPILING)
     add_compile_options(-march=native)
   endif()
 endif()
